# rs-face-detection

./: Cargo.toml  README.md  build.rs
processing/: bbox_transform.rs  generate_anchors.rs  nms.rs
rcnn/: anchors.rs  cpu_nms.rs
src/: lib.rs
src/pipeline/: mod.rs
src/pipeline/customer/: pipeline.rs
src/pipeline/ekyc_pipeline/: config.rs  helper.rs  mod.rs  pipeline.rs
src/pipeline/face_pipeline/: config.rs  mod.rs  pipeline.rs
src/pipeline/module/: face_align.rs  face_alignment.rs  face_antispoofing.rs  face_detection.rs  face_extraction.rs  face_quality.rs  face_quality_assessment.rs  face_selection.rs  mod.rs
src/processing/: bbox_regression.rs  bbox_transform.rs  generate_anchors.rs  mod.rs  nms.rs
src/rcnn/: anchors.rs  bbox.rs
src/triton_client/: client.rs
src/utils/: image.rs  utils.rs
triton_client/: client.rs
utils/: utils.rs
