[package]
name = "rs-faceid-pipeline"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
ndarray-rand = "0.14.0"
prost = "0.12.6"
prost-build = "0.12.6"
tonic = "0.11.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic-build = "0.11.0"
anyhow = "1.0.86"
image = "0.25.1"
opencv = { version = "0.92.0", default-features = false, features = ["calib3d", "features2d", "rgb", "imgproc", "imgcodecs"]}
nalgebra = "0.32.5"
ndarray-linalg = "0.16.0"

[build-dependencies]
tonic-build = "0.11.0"
